# cpp_programming_MIPT_seminars

08/: CMakeLists.txt
08/calculator08/: CMakeLists.txt
08/calculator08/include/: Token_stream.h
08/calculator08/src/: Token_stream.cpp  calculator.cpp
08/lib/vec/: vec2d.cpp  vec2d.h
08/vec/: CMakeLists.txt
BinChainsCalculatorBackend/: CMakeLists.txt  main  main.cpp
BinChainsCalculatorBackend/bits/: stdc++.h
BinChainsCalculatorBackend/element/: log_elem.h
BinChainsCalculatorBackend/main.dSYM/Contents/Resources/DWARF/: main
BinChainsCalculatorBackend/test/: test.txt
KOCH SNOWFLAKE/: CMakeLists.txt
KOCH SNOWFLAKE/koch_snowflake/: CMakeLists.txt  main.cpp
KOCH SNOWFLAKE/koch_snowflake/lib/poly/: poly.h
Pascals-Triangle/: CMakeLists.txt  main.cpp
antikoch/: CMakeLists.txt  main.cpp
antikoch/lib/bits/: stdc++.h
calculator08_vec_LogicElements/: .gitignore  CMakeLists.txt
calculator08_vec_LogicElements/calculator08/: CMakeLists.txt
calculator08_vec_LogicElements/calculator08/include/: Token_stream.h
calculator08_vec_LogicElements/calculator08/src/: Token_stream.cpp
calculator08_vec_LogicElements/lib/vec/: vec2d.cpp  vec2d.h
calculator08_vec_LogicElements/vec/: main.cpp
dragon_fractal/: CMakeLists.txt  main.cpp
dragon_fractal/lib/Graph_lib/: Graph.cpp
dragon_fractal/lib/poly/: CMakeLists.txt  poly.cpp
superellipse/: CMakeLists.txt  main.cpp
superellipse/lib/poly/: poly.cpp
